--- a/app/src/main/res/layout/activity_mostrar_qr.xml
+++ b/app/src/main/res/layout/activity_mostrar_qr.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#212121"
+    android:background="?attr/android:colorBackground"
     tools:context=".Perfil.MostrarQRActivity">
 
     <!-- Título -->
@@ -16,7 +16,7 @@
         android:text="Mi Código QR"
         android:textSize="26sp"
         android:textStyle="bold"
-        android:textColor="#FFFFFF"
+        android:textColor="?attr/colorOnBackground"
         android:layout_marginTop="32dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,7 +32,7 @@
         android:layout_marginTop="32dp"
         app:cardCornerRadius="16dp"
         app:cardElevation="8dp"
-        app:cardBackgroundColor="#2E2E2E"
+        app:cardBackgroundColor="?attr/colorSurface"
         app:layout_constraintTop_toBottomOf="@id/tv_titulo_qr"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -50,7 +50,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Nombre del Usuario"
-                android:textColor="#FFFFFF"
+                android:textColor="?attr/colorOnSurface"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:layout_marginBottom="24dp"/>
@@ -68,7 +68,7 @@
                 android:id="@+id/tv_uid_qr"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="#BDBDBD"
+                android:textColor="?attr/colorOnSurfaceVariant"
                 android:textSize="14sp"
                 android:layout_marginBottom="16dp"
                 android:text="UID: "/>
