--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/verde"
+    android:background="?attr/android:colorBackground"
     android:padding="24dp"
     android:gravity="center">
 
@@ -32,7 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:textColor="@android:color/white"
+        android:textColor="?attr/colorOnBackground"
         android:textStyle="bold"
         android:textSize="16sp"
         android:fontFamily="sans-serif-medium"
@@ -44,7 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:textColor="@android:color/white"
+        android:textColor="?attr/colorOnBackground"
         android:textSize="13sp"
         android:fontFamily="sans-serif"
         android:gravity="center"
