--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -3,8 +3,10 @@
     <style name="Base.Theme.SeguridadCiudadana" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="colorPrimary">@color/darkPrimary</item>
         <item name="colorOnPrimary">@color/white</item>
-        <item name="colorSecondary">@color/darkSecondary</item>
-        <item name="colorOnSecondary">@color/white</item>
+
+        <item name="android:colorBackground">@color/darkBackground_greenish</item> <item name="colorOnBackground">@color/white</item>
+
+        <item name="colorSurface">@color/darkSurface_greenish</item>        <item name="colorOnSurface">@color/white</item>
 
     </style>
 
