--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,12 +9,13 @@
 
     <color name="darkPrimary">#121212</color> <!-- Gris oscuro o negro -->
     <color name="darkSecondary">#1E1E1E</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
 
     <color name="gray_700">#616161</color>
 
     <!-- Nuevo color para el fondo de la lista/pantalla -->
     <color name="background_light_gray">#F5F5F5</color>
+
+    <color name="darkBackground_greenish">#1C2A1E</color>  <color name="darkSurface_greenish">#263A29</color>     <color name="white">#FFFFFFFF</color>
+    <color name="black">#FF000000</color>
 
 </resources>
