Se agrego la funcion de chat comunitario con sus pantallas a falta de las funciones del administrador

--- a/app/src/main/res/menu/menu_bottom.xml
+++ b/app/src/main/res/menu/menu_bottom.xml
@@ -12,5 +12,9 @@
         android:id="@+id/nav_contactos"
         android:icon="@drawable/ic_contacts"
         android:title="Contactos" />
+    <item
+        android:id="@+id/nav_chats"
+        android:icon="@drawable/ic_chat"
+    android:title="Chats Comunitarios" />
 
 </menu>
